ver-2(같은 층으로)
같은 층으로 정리, archive 완성

--- a/thomthiswld.html
+++ b/thomthiswld.html
@@ -29,8 +29,8 @@
             }
             </style>
 
-        <li style="margin-top: 40px;">• <a class="link" href="index/archive.html">Archive</a></li>
-        <li style="margin-top: 10px;">• <a class="link" href="index/contact.html">Contact</a></li>
+        <li style="margin-top: 40px;">• <a class="link" href="ttw-archive.html">Archive</a></li>
+        <li style="margin-top: 10px;">• <a class="link" href="ttw-contact.html">Contact</a></li>
         
     </ul>
 </body>
