--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             }
             </style>
 
-        <li style="margin-top: 40px;">• <a class="link" href="ttw-archive.html">Archive</a></li>
-        <li style="margin-top: 10px;">• <a class="link" href="ttw-contact.html">Contact</a></li>
+        <li style="margin-top: 40px;">• <a class="link" href="archive.html">Archive</a></li>
+        <li style="margin-top: 10px;">• <a class="link" href="contact.html">Contact</a></li>
         
     </ul>
 </body>
