--- a/arc-무제.html
+++ b/arc-무제.html
@@ -63,7 +63,7 @@
 
         <div class="main-font" style="font-weight: 300; margin-left: 5px; margin-top: 100px;">
             <p class="normal" style=" font-size: 110%;font-weight:600;">02.27.2021</p>
-            <p>너 덕분에 이런 경험도 해본다는 고마움.<br>정말 죽을 때까지. 영원히. 간직하고 싶은 기억이다.</p>
+            <p>정말 죽을 때까지. 영원히. 간직하고 싶은 기억이다.</p>
         </div>
 
         <div class="main-font" style="font-weight: 300; margin-left: 5px; margin-top: 100px;">
