--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,14 @@
 
         <h1 class="normal" style="margin-left: 10px; font-weight: 700;">Contact</h1>
 
+        <style type="text/css">
+
+            .black{
+                color:black;
+                text-decoration:none;
+            }
+            </style>
+
         <style>
             ul{
                 list-style: none;
@@ -28,8 +36,8 @@
         <ul style="font-weight: 400;">
             <li style="margin-top: 40px;">- 0106__82030</li>
             <li style="margin-top: 10px;">- thomthiswld@gmail.com</li>
-            <li style="margin-top: 10px;">- instagram/@thomthiswld</li>
-            <li style="margin-top: 10px;">- github/thomthiswld</li>
+            <li style="margin-top: 10px;">- <a class="black" href="https://www.instagram.com/thomthiswld/">instagram/@thomthiswld</a></li>
+            <li style="margin-top: 10px;">- <a class="black" href="https://github.com/thomthiswld/">github/thomthiswld</a></li>
         </ul>
         
         
