a href target="_blank"

--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
         <ul style="font-weight: 400;">
             <li style="margin-top: 40px;">- 0106__82030</li>
             <li style="margin-top: 10px;">- thomthiswld@gmail.com</li>
-            <li style="margin-top: 10px;">- <a class="black" href="https://www.instagram.com/thomthiswld/">instagram/@thomthiswld</a></li>
-            <li style="margin-top: 10px;">- <a class="black" href="https://github.com/thomthiswld/">github/thomthiswld</a></li>
+            <li style="margin-top: 10px;">- <a class="black" href="https://www.instagram.com/thomthiswld/" target="_blank">instagram/@thomthiswld</a></li>
+            <li style="margin-top: 10px;">- <a class="black" href="https://github.com/thomthiswld/" target="_blank" >github/thomthiswld</a></li>
         </ul>
         
         
