--- a/arc-무제.html
+++ b/arc-무제.html
@@ -97,6 +97,11 @@
             <p>누구의 잘못도 없는데, <br>분명 누굴 탓할 일도 아닌데, <br>이런저런 세상 일들은 나쁘게 흘러갈 때가 참 많았다. <br>그래서 자신을 탓하지 않길 바랐다.</p>
         </div>
 
+        <div class="main-font" style="font-weight: 300; margin-left: 5px; margin-top: 100px;">
+            <p class="normal" style=" font-size: 110%;font-weight:600;">2021.08.10</p>
+            <p>그때 했던 생각, 되게 적고 싶었는데. <br>벌떡 일어나서 타자 좀 치는게 뭐가 그리 귀찮다고 그 소중한 생각을 날렸을까. <br>그래도 기록하지 않아서 다행이다.</p>
+        </div>
+
         
 
 
